finished PCB (again)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-.DS_Store
-._DS_Store
-._*
+Makefiles/
+Makefile
+build/
+refrences/
 *.vim
-Circuits/power_control_circuit_V2/#auto_saved_files#
+.DS_Store/
+._.DS_Store
+.DS_Store
+*cache
+*cache/
+__pychache__/
+__pychache__
+__pychache__/
+__pychache__
+*.pyc
+*.kicad_prl
+*.lck
+*auto_saved_files*
+~$*.xlsx
+*backups/
+*_autosave*
+*.~*
+~$*
